anthos-bundles/cost-reliability-v2023/restrict-repos.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: cost-reliability-v2023-restrict-repos
  annotations:
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'cost-reliability-v2023',
        bundleDisplayName: 'Cost and Reliability v2023',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-cost-reliability-v2023',
        bundleVersion: '202307.0-preview',
        bundleDescription: 'Use the Cost and Reliability v2023 Policy bundle with Policy Controller to evaluate your Google Kubernetes Engine (GKE) cluster resources against cost and reliability best practices.',
        controlNumbers: '[]',
        severity: 'UNASSIGNED',
        description: 'Restricts container images to an allowed `repos` list.',
        remediation: 'Containers images must be in the allowed `repos` list. Use a different container image or add allowed repos to the `repos` parameter. See "Images" for more information: https://kubernetes.io/docs/concepts/containers/images/',
        minimumTemplateLibraryVersion: '1.10.1'
      }"
  labels:
    policycontroller.gke.io/bundleName: cost-reliability-v2023
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
  parameters:
    repos:
      - gcr.io/gke-release/
      - gcr.io/anthos-baremetal-release/
      - gcr.io/config-management-release/
      - gcr.io/kubebuilder/
      - gcr.io/gkeconnect/
      - gke.gcr.io/
      # Artifact Registry Example
      # - LOCATION-docker.pkg.dev/PROJECT-ID/REPOSITORY/IMAGE:TAG
